feat: add real time update event_registration. feat: add views for event and event_registrations

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -38,7 +38,7 @@
 
   <div class="my-5">
     <%= form.label :status %>
-    <%= form.text_field :status, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.select :status, Event.statuses.keys.map { |status| [status.humanize, status] }, {}, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
   <div class="inline">
