--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,15 +1,144 @@
-<div class="mx-auto md:w-2/3 w-full flex">
+<div class="mx-auto md:w-2/3 w-full">
   <div class="mx-auto">
-    <% if notice.present? %>
-      <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
-    <% end %>
 
-    <%= render @event %>
-
-    <%= link_to "Edit this event", edit_event_path(@event), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to "Back to events", events_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <div class="inline-block ml-2">
-      <%= button_to "Destroy this event", @event, method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
+    <div class="bg-white shadow-md rounded-lg overflow-hidden mb-5">
+      <div class="px-6 py-4">
+        <div class="font-bold text-xl mb-2 text-gray-900"><%= @event.name %></div>
+        <p class="text-gray-700 text-base"><%= @event.description %></p>
+      </div>
+      <div class="px-6 pt-4 pb-2">
+        <div class="flex flex-wrap -mx-4">
+          <div class="w-full px-4 py-2">
+            <span class="block text-sm font-medium text-gray-500">Organizer</span>
+            <span class="block text-lg text-gray-900"><%= @event.organizer %></span>
+          </div>
+          <div class="w-full px-4 py-2">
+            <span class="block text-sm font-medium text-gray-500">Start Time</span>
+            <span class="block text-lg text-gray-900"><%= @event.start_time.strftime('%B %d, %Y %H:%M') %></span>
+          </div>
+          <div class="w-full px-4 py-2">
+            <span class="block text-sm font-medium text-gray-500">End Time</span>
+            <span class="block text-lg text-gray-900"><%= @event.end_time.strftime('%B %d, %Y %H:%M') %></span>
+          </div>
+          <div class="w-full px-4 py-2">
+            <span class="block text-sm font-medium text-gray-500">Status</span>
+            <span class="block text-lg text-gray-900"><%= @event.status %></span>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <div class="grid gap-6 mb-8 md:grid-cols-2 xl:grid-cols-4">
+      <!-- Card -->
+      <div class="flex items-center p-4 bg-white rounded-lg shadow-xs">
+        <div class="p-3 mr-4 text-blue-500 bg-blue-100 rounded-full">
+          <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+            <path d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z"></path>
+          </svg>
+        </div>
+        <div>
+          <p class="mb-2 text-sm font-medium text-gray-600">Total Invited</p>
+          <p class="text-lg font-semibold text-gray-700"><%= @event.attendees.count %></p>
+        </div>
+      </div>
+      <!-- Card -->
+      <div class="flex items-center p-4 bg-white rounded-lg shadow-xs">
+        <div class="p-3 mr-4 text-yellow-500 bg-yellow-100 rounded-full">
+          <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+            <path fill-rule="evenodd" d="M18 5v8a2 2 0 01-2 2h-5l-5 4v-4H4a2 2 0 01-2-2V5a2 2 0 012-2h12a2 2 0 012 2zM7 8H5v2h2V8zm2 0h2v2H9V8zm6 0h-2v2h2V8z" clip-rule="evenodd"></path>
+          </svg>
+        </div>
+        <div>
+          <p class="mb-2 text-sm font-medium text-gray-600">Pending</p>
+          <p class="text-lg font-semibold text-gray-700"><%= @event.event_registrations.where(status: 'pending').count %></p>
+        </div>
+      </div>
+      <!-- Card -->
+      <div class="flex items-center p-4 bg-white rounded-lg shadow-xs">
+        <div class="p-3 mr-4 text-green-500 bg-green-100 rounded-full">
+          <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+            <path fill-rule="evenodd" d="M4 4a2 2 0 00-2 2v4a2 2 0 002 2V6h10a2 2 0 00-2-2H4zm2 6a2 2 0 012-2h8a2 2 0 012 2v4a2 2 0 01-2 2H8a2 2 0 01-2-2v-4zm6 4a2 2 0 100-4 2 2 0 000 4z" clip-rule="evenodd"></path>
+          </svg>
+        </div>
+        <div>
+          <p class="mb-2 text-sm font-medium text-gray-600">Accepted</p>
+          <p class="text-lg font-semibold text-gray-700"><%= @event.event_registrations.where(status: 'accepted').count %></p>
+        </div>
+      </div>
+
+      <!-- Card -->
+      <div class="flex items-center p-4 bg-white rounded-lg shadow-xs">
+        <div class="p-3 mr-4 text-red-500 bg-red-100 rounded-full">
+          <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+            <path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"></path>
+          </svg>
+        </div>
+        <div>
+          <p class="mb-2 text-sm font-medium text-gray-600">Declined</p>
+          <p class="text-lg font-semibold text-gray-700"><%= @event.event_registrations.where(status: 'declined').count %></p>
+        </div>
+      </div>
+      <!-- Card -->
+      <div class="flex items-center p-4 bg-white rounded-lg shadow-xs">
+        <div class="p-3 mr-4 text-purple-500 bg-purple-100 rounded-full">
+          <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+            <path fill-rule="evenodd" d="M5 3a2 2 0 00-2 2v4a2 2 0 002 2h10a2 2 0 002-2V5a2 2 0 00-2-2H5zm0 4h10V5H5v2zm-1 4a2 2 0 012-2h6a2 2 0 012 2v4a2 2 0 01-2 2H6a2 2 0 01-2-2v-4z" clip-rule="evenodd"></path>
+          </svg>
+        </div>
+        <div>
+          <p class="mb-2 text-sm font-medium text-gray-600">Checked In</p>
+          <p class="text-lg font-semibold text-gray-700"><%= @event.event_registrations.where(status: 'checked_in').count %></p>
+        </div>
+      </div>
+      <!-- Card -->
+      <div class="flex items-center p-4 bg-white rounded-lg shadow-xs">
+        <div class="p-3 mr-4 text-gray-500 bg-gray-100 rounded-full">
+          <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+            <path fill-rule="evenodd" d="M5 3a2 2 0 00-2 2v4a2 2 0 002 2h10a2 2 0 002-2V5a2 2 0 00-2-2H5zm0 4h10V5H5v2zm-1 4a2 2 0 012-2h6a2 2 0 012 2v4a2 2 0 01-2 2H6a2 2 0 01-2-2v-4z" clip-rule="evenodd"></path>
+          </svg>
+        </div>
+        <div>
+          <p class="mb-2 text-sm font-medium text-gray-600">No Show</p>
+          <p class="text-lg font-semibold text-gray-700"><%= @event.event_registrations.where(status: 'no_show').count %></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="bg-white shadow-md rounded-lg overflow-hidden mb-5">
+      <div class="px-6 py-4">
+
+        <div class="flex justify-between">
+          <div class="font-bold text-xl  text-gray-900">Attendees</div>
+          <div class="flex justify-end">
+            <%= link_to "Add Attendee", new_event_event_registration_path(@event),
+                        class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium",
+                        data: { turbo_frame: dom_id(EventRegistration.new) } %>
+          </div>
+        </div>
+        <%= turbo_frame_tag EventRegistration.new %>
+
+        <%= turbo_stream_from "event_registrations" %>
+        <table class="min-w-full divide-y divide-gray-200">
+          <thead class="bg-gray-50">
+          <tr>
+            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name</th>
+            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Email</th>
+            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
+            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Actions</th>
+          </tr>
+          </thead>
+          <tbody class="bg-white divide-y divide-gray-200" id="event_registrations">
+             <%= render @event.event_registrations %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+    <div class="flex items-center">
+      <%= link_to "Edit this event", edit_event_path(@event), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+      <%= link_to "Back to events", events_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+      <%= button_to "Destroy this event", @event, method: :delete, data: { confirm: 'Are you sure?' }, class: "ml-2 rounded-lg py-3 px-5 bg-red-600 text-white inline-block font-medium" %>
+    </div>
+
   </div>
 </div>
