--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,16 +5,31 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
+
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="bg-gray-200 dark:bg-gray-800">
     <header>
       <%= render 'shared/navbar' if user_signed_in? %>
     </header>
-    <main class="container mx-auto mt-15 px-5 flex">
+    <% if notice.present? %>
+    <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative mb-5" role="alert">
+      <strong class="font-bold">Notice:</strong>
+      <span class="block sm:inline"><%= notice %></span>
+    </div>
+  <% end %>
+
+  <% if alert.present? %>
+    <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mb-5" role="alert">
+      <strong class="font-bold">Alert:</strong>
+      <span class="block sm:inline"><%= alert %></span>
+    </div>
+  <% end %>
+    <main class="container mx-auto mt-[35px] px-5 flex">
+
       <%= yield %>
     </main>
   </body>
