--- a/app/views/event_registrations/destroy.turbo_stream.erb
+++ b/app/views/event_registrations/destroy.turbo_stream.erb
@@ -1,1 +1,5 @@
 <%= turbo_stream.remove @event_registration %>
+
+<%#= turbo_stream.replace dom_id(@event, :counters) do %>
+  <%#= render 'events/counters', event: @event %>
+<%# end %>
