--- a/app/views/event_registrations/edit.html.erb
+++ b/app/views/event_registrations/edit.html.erb
@@ -30,8 +30,8 @@
     <div class="mt-6">
       <p class="text-gray-700 font-bold mb-2">Please select one of the following options:</p>
       <div class="flex gap-4 mt-4">
-        <%= button_to 'Accepted', event_event_registration_path(@event_registration.event, @event_registration), data: { turbo: false }, params: { event_registration: { status: 'accepted' } }, method: :put, class: "bg-green-500 text-white font-bold py-2 px-4 rounded" %>
-        <%= button_to 'Declined', event_event_registration_path(@event_registration.event, @event_registration), data: { turbo: false }, params: { event_registration: { status: 'declined' } }, method: :put, class: "bg-red-500 text-white font-bold py-2 px-4 rounded" %>
+        <%= button_to 'Accepted', event_event_registration_path(@event_registration.event, @event_registration), params: { event_registration: { status: 'accepted' } }, method: :put, class: "bg-green-500 text-white font-bold py-2 px-4 rounded" %>
+        <%= button_to 'Declined', event_event_registration_path(@event_registration.event, @event_registration), params: { event_registration: { status: 'declined' } }, method: :put, class: "bg-red-500 text-white font-bold py-2 px-4 rounded" %>
       </div>
     </div>
 </div>
