feat: add ransack filter

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,6 +6,26 @@
     <%= link_to "New event", new_event_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
+  <%= search_form_for @search, url: events_path, method: :get, class: "mb-5" do |f| %>
+    <div class="flex flex-wrap gap-4">
+      <div class="flex flex-col">
+        <%= f.label :name_cont, "Name", class: "font-medium" %>
+        <%= f.search_field :name_cont, class: "px-3 py-2 border rounded" %>
+      </div>
+      <div class="flex flex-col">
+        <%= f.label :organizer_cont, "Organizer", class: "font-medium" %>
+        <%= f.search_field :organizer_cont, class: "px-3 py-2 border rounded" %>
+      </div>
+      <div class="flex flex-col">
+        <%= f.label :status_eq, "Status", class: "font-medium" %>
+        <%= f.select :status_eq, Event.statuses.keys.map { |status| [status.humanize, status] }, { include_blank: true }, class: "px-3 py-2 border rounded" %>
+      </div>
+      <div class="flex items-end">
+        <%= f.submit "Search", class: "px-4 py-2 bg-blue-600 text-white rounded" %>
+      </div>
+    </div>
+  <% end %>
+
   <div id="events" class="min-w-full">
     <table class="w-full table-auto border-2 border-gray">
       <thead>
