--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -34,6 +34,26 @@
     </div>
 
 
+    <%#= search_form_for @search, url: event_event_registrations_path(@event), method: :get, class: "mb-5" do |f| %>
+<!--      <div class="flex flex-wrap gap-4">-->
+<!--        <div class="flex flex-col">-->
+          <%#= f.label :attendee_name_cont, "Name", class: "font-medium" %>
+          <%#= f.search_field :attendee_name_cont, class: "px-3 py-2 border rounded" %>
+<!--        </div>-->
+<!--        <div class="flex flex-col">-->
+          <%#= f.label :attendee_email_cont, "Email", class: "font-medium" %>
+          <%#= f.search_field :attendee_email_cont, class: "px-3 py-2 border rounded" %>
+<!--        </div>-->
+<!--        <div class="flex flex-col">-->
+          <%#= f.label :status_eq, "Status", class: "font-medium" %>
+          <%#= f.select :status_eq, EventRegistration.statuses.keys.map { |status| [status.humanize, status] }, { include_blank: true }, class: "px-3 py-2 border rounded" %>
+<!--        </div>-->
+<!--        <div class="flex items-end">-->
+          <%#= f.submit "Search", class: "px-4 py-2 bg-blue-600 text-white rounded" %>
+<!--        </div>-->
+<!--      </div>-->
+    <%# end %>
+
     <div class="bg-white shadow-md rounded-lg overflow-hidden mb-5">
       <div class="px-6 py-4">
 
@@ -48,6 +68,7 @@
         <%= turbo_frame_tag EventRegistration.new %>
 
         <%= turbo_stream_from "event_registrations" %>
+
         <table class="min-w-full divide-y divide-gray-200">
           <thead class="bg-gray-50">
           <tr>
