feat: add coverage simplecov report to tests. feat: send email notification when add new attendee using sendgrid smpt

--- a/app/views/event_registrations/destroy.turbo_stream.erb
+++ b/app/views/event_registrations/destroy.turbo_stream.erb
@@ -1,5 +1,5 @@
 <%= turbo_stream.remove @event_registration %>
 
-<%#= turbo_stream.replace dom_id(@event, :counters) do %>
-  <%#= render 'events/counters', event: @event %>
-<%# end %>
+<%= turbo_stream.replace dom_id(@event, :counters) do %>
+  <%= render 'events/counters', event: @event %>
+<% end %>
