--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,17 +35,17 @@
           <div class="flex items-center h-5">
             <%#= f.input :terms, as: :boolean, label: false, input_html: { id: "terms", class: "w-4 h-4 border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:focus:ring-primary-600 dark:ring-offset-gray-800 dark:bg-gray-700 dark:border-gray-600" } %>
           </div>
-          <div class="ml-3 text-sm">
-            <label for="terms" class="font-medium text-gray-900 dark:text-white">
-              I accept the <a href="#" class="text-primary-700 hover:underline dark:text-primary-500">Terms and Conditions</a>
-            </label>
-          </div>
+<!--          <div class="ml-3 text-sm">-->
+<!--            <label for="terms" class="font-medium text-gray-900 dark:text-white">-->
+<!--              I accept the <a href="#" class="text-blue-700 hover:underline dark:text-blue-500">Terms and Conditions</a>-->
+<!--            </label>-->
+<!--          </div>-->
         </div>
         <div>
-          <%= f.button :submit, "Create account", class: "w-full px-5 py-3 text-base font-medium text-center text-white bg-primary-700 rounded-lg hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 sm:w-auto dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800" %>
+          <%= f.button :submit, "Create account", class: "w-full px-5 py-3 text-base font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:ring-primary-300 sm:w-auto dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-primary-800" %>
         </div>
         <div class="text-sm font-medium text-gray-500 dark:text-gray-400">
-          Already have an account? <%= link_to "Login here", new_session_path(resource_name), class: "text-primary-700 hover:underline dark:text-primary-500" %>
+          Already have an account? <%= link_to "Login here", new_session_path(resource_name), class: "text-blue-700 hover:underline dark:text-blue-500" %>
         </div>
       </div>
     <% end %>
