--- a/app/views/event_registrations/update.turbo_stream.erb
+++ b/app/views/event_registrations/update.turbo_stream.erb
@@ -1,3 +1,3 @@
-<%#= turbo_stream.update dom_id(@event, :counters) do %>
-  <%#= render 'events/counters', event: @event %>
-<%# end %>
+<%= turbo_stream.update dom_id(@event, :counters) do %>
+  <%= render 'events/counters', event: @event %>
+<% end %>
